--- a/templates/all_events.html
+++ b/templates/all_events.html
@@ -19,7 +19,7 @@
 
                     <span class="title"><strong>Name:</strong></span> {{events.client_name}}
                     <p><span class="title"><strong>Client Reference:</strong></span> {{events.client_ref}}</p>
-                    <p><span class="title"><strong>Location:</strong></span> {{events.location}}</p>
+                    <p><span class="title"><strong>Farm Location:</strong></span> {{events.location}}</p>
                     
                     <p><span class="title"><strong>Visit Date:</strong></span> {{events.date}}</p>
                     <p><span class="title"><strong>Visit Time:</strong></span> {{events.visit_time}}</p>
