--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -97,7 +97,7 @@
 
       <div class="row">
         <div class="input-field col s12">
-         <button class="btn waves-effect waves-light" type="submit" required>Submit
+         <button class="btn waves-effect waves-light" type="submit" id="submit_icon" required>Submit
         <i class="material-icons right">send</i>
         </button>
          </div>
