update edit app form

--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -17,17 +17,9 @@
 
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">code</i>
-          <input id="client_ref" name="client_ref" type="text" class="validate" required maxlength="7" readonly value="{{event.client_ref}}">
-          <label for="icon_code">Client Ref</label>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="input-field col s12">
           <i class="material-icons prefix">location_on</i>
           <input id="location" name="location" type="text" class="validate" required readonly value="{{event.location}}">
-          <label for="icon_location_on">Location</label>
+          <label for="icon_location_on">Farm Location</label>
         </div>
       </div>
 
