--- a/templates/base.html
+++ b/templates/base.html
@@ -49,14 +49,13 @@
         <li class="divider"></li>
         <li><a href="{{url_for('purpose')}}">Appointments Purpose</a></li>
         <li><a href="{{url_for('add_purpose')}}">Add Purpose</a></li>
-        
-        <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
-        <li><a href="{{url_for('add_user')}}">Add Vet Account</a></li>
         <li class="divider"></li>
         <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
         <li><a href="{{url_for('add_client')}}">Add Client Account</a></li>
         <li class="divider"></li>
-
+        <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
+        <li><a href="{{url_for('add_user')}}">Add Vet Account</a></li>
+        <li class="divider"></li>
 </ul>
 
 </div>
