--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,11 @@
+.container {
+  overflow:   scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+} 
+
 /*--Navigation--*/
 nav .brand-logo {
     margin-left: 15px;
@@ -6,7 +14,6 @@ nav .brand-logo {
 .nav-wrapper {
     background-color: #26a69a;
 }
-
 
 /*--Footer--*/
 
@@ -64,6 +71,10 @@ color: #26a69a;
 #label {
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.container .row {
+    margin-left: 1px;
 }
 
 
