--- a/templates/base.html
+++ b/templates/base.html
@@ -1,107 +1,86 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Appointments Manager</title> 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
-</head>
-
-<body>
-
-
-<!-- Dropdown Navigation Structure -->
-<header>
-<nav>
-<ul id="dropdown1" class="dropdown-content">
-    <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
-    <li class="divider"></li>
-    <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
-</ul>
-
-  <div class="nav-wrapper">
-    <a href="{{url_for('all_events')}}" class="brand-logo">Appointments Manager</a>
-     <a href="{{url_for('all_events')}}" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    
-<ul class="right hide-on-med-and-down">
-
-    <ul id="dropdown2" class="dropdown-content">
-        <li><a href="{{url_for('all_events')}}">All Appointments</a></li>
-        <li class="divider"></li>
-        <li><a href="{{url_for('purpose')}}">Appointments Purpose</a></li>
-    </ul>
-
-<!-- Dropdown Navigation Trigger -->
-
-    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Accounts<i class="material-icons right">arrow_drop_down</i></a></li>
-    <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Appointments<i class="material-icons right">arrow_drop_down</i></a></li>
-
-</ul>
-
-<!-- Mobile Navigation Sidebar -->
-
-<ul class="side-nav" id="mobile-demo">
-        <li><a href="{{url_for('all_events')}}">All Appointments</a></li>
-        <li><a href="{{url_for('add_event')}}">Add Appointments</a></li>
-        <li class="divider"></li>
-        <li><a href="{{url_for('purpose')}}">Appointments Purpose</a></li>
-        <li><a href="{{url_for('add_purpose')}}">Add Purpose</a></li>
-        <li class="divider"></li>
-        <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
-        <li><a href="{{url_for('add_client')}}">Add Client Account</a></li>
-        <li class="divider"></li>
-        <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
-        <li><a href="{{url_for('add_user')}}">Add Vet Account</a></li>
-        <li class="divider"></li>
-</ul>
-
-</div>
-</nav>
-</header>
-
-  
-<!--Appointment According-->
-
-<div class="container">
-{% block content %} {% endblock %}
-</div>
-
-
-<!--Footer-->
-<footer>
- <div class="footer">
-  <p>Client & Vet Appointments Manager</p>
-</div>
-</footer>
-
-<!--Scripts-->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('.collapsible').collapsible();
-            $('select').material_select();
-            $(".button-collapse").sideNav();
-        });
-
-        $('.datepicker').pickadate({
-            selectMonths: true, 
-            selectYears: 15,
-            today: 'Today',
-            clear: 'Clear',
-            close: 'Ok',
-            closeOnSelect: false,
-            format: 'dd/mm/yyyy'
-        });
-            document.getElementById("matfix").addEventListener("click", function(e) {
-            e.stopPropagation();
-            });
-    </script>
-
-</body>
-
+<html lang="en">
+   <head>
+      <title>Appointments Manager</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+      <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+   </head>
+   <body>
+      <!-- Dropdown Navigation Structure -->
+      <header>
+         <nav>
+            <ul id="dropdown1" class="dropdown-content">
+               <li><a href="{{url_for('all_events')}}">All Appointments</a></li>
+               <li class="divider"></li>
+               <li><a href="{{url_for('purpose')}}">Appointments Purpose</a></li>
+            </ul>
+            <div class="nav-wrapper">
+               <a href="{{url_for('all_events')}}" class="brand-logo">Appointments Manager</a>
+               <a href="{{url_for('all_events')}}" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+               <ul class="right hide-on-med-and-down">
+                  <ul id="dropdown2" class="dropdown-content">
+                     <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
+                     <li class="divider"></li>
+                     <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
+                  </ul>
+                  <!-- Dropdown Navigation Trigger -->
+                  <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Appointments<i class="material-icons right">arrow_drop_down</i></a></li>
+                  <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Accounts<i class="material-icons right">arrow_drop_down</i></a></li>
+               </ul>
+               <!-- Mobile Navigation Sidebar -->
+               <ul class="side-nav" id="mobile-demo">
+                  <li><a href="{{url_for('all_events')}}">All Appointments</a></li>
+                  <li><a href="{{url_for('add_event')}}">Add Appointments</a></li>
+                  <li class="divider"></li>
+                  <li><a href="{{url_for('purpose')}}">Appointments Purpose</a></li>
+                  <li><a href="{{url_for('add_purpose')}}">Add Purpose</a></li>
+                  <li class="divider"></li>
+                  <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
+                  <li><a href="{{url_for('add_client')}}">Add Client Account</a></li>
+                  <li class="divider"></li>
+                  <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
+                  <li><a href="{{url_for('add_user')}}">Add Vet Account</a></li>
+                  <li class="divider"></li>
+               </ul>
+            </div>
+         </nav>
+      </header>
+      <!--Appointment According-->
+      <div class="container">
+         {% block content %} {% endblock %}
+      </div>
+      <!--Footer-->
+      <footer>
+         <div class="footer">
+            <p>Client & Vet Appointments Manager</p>
+         </div>
+      </footer>
+      <!--Scripts-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+      <script type="text/javascript">
+         $(document).ready(function() {
+             $('.collapsible').collapsible();
+             $('select').material_select();
+             $(".button-collapse").sideNav();
+         });
+         
+         $('.datepicker').pickadate({
+             selectMonths: true, 
+             selectYears: 15,
+             today: 'Today',
+             clear: 'Clear',
+             close: 'Ok',
+             closeOnSelect: false,
+             format: 'dd/mm/yyyy'
+         });
+             document.getElementById("matfix").addEventListener("click", function(e) {
+             e.stopPropagation();
+             });
+      </script>
+   </body>
 </html>
